--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "i18n:scan": "i18next-parser",
-    "extract": "vue-i18n-extract report -v ./src/**/*.vue -l ./src/locales/zh-CN/translation.json"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^1.13.2",
@@ -25,9 +23,6 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "i18n-extractor": "^1.0.0",
-    "i18next": "^25.7.3",
-    "i18next-parser": "^9.0.2",
     "vue-i18n": "^12.0.0-alpha.3",
     "xlsx": "^0.18.5"
   },
