--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "moment": "^2.30.1",
     "socket.io-client": "^4.8.1",
+    "uuid": "^13.0.0",
     "vue": "^3.2.13",
     "vue-i18n-extract": "^2.0.7"
   },
