--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.30.1",
     "socket.io-client": "^4.8.1",
     "uuid": "^13.0.0",
+    "vant": "^4.9.22",
     "vue": "^3.2.13",
     "vue-i18n-extract": "^2.0.7"
   },
